@@ -1,0 +1,58 @@
+==========================================
+CannonBall - A Bukkit Plugin for Minecraft
+==========================================
+By sunkid
+
+CannonBall - shoot live TNT from dispensers with configurable angles and velocities
+
+Discussion Forum Link: http://bit.ly/cannons4bukkit
+Source & Latest Release: https://github.com/sunkid/CannonBall
+
+Functionality:
+--------------
+#) dispensers configured as cannons will shoot live TNT when dispensing TNT
+#) cannon configuration include angle, velocity, and a fuse length (not yet implemented)
+#) dispensers can be turned into cannons by left-clicking with torches or redstone dust
+#) cannons can be turned into dispensers by left-clicking with redstone dust
+#) the '/cb' command allows for the display and configuration of user-specific cannon settings
+#) user-specific cannon settings can be applied to a dispenser or cannon by left-clicking with a torch
+#) cannon settings can be displayed by left-clicking a dispenser bare-handed
+
+INSTALLATION:
+-------------
+
+#) download jar file and move to your plugins folder
+#) reload your server
+#) read and adjust configuration file in plugins/CannonBall/config.yml
+#) reload your server if you made any changes
+
+UPGRADING FROM PREVIOUS VERSIONS OF CannonBall
+----------------------------------------------
+
+#) follow INSTALLATION steps 1 - 3.
+#) if you see a warning message about an outdated config.yml file, simply follow the instructions
+   in plugins/CannonBall/config-new.yml
+#) if there is no warning message, you are good to go
+
+Licensing
+_________
+
+This software is copyright by sunkid <sunkid@iminurnetz.com> and is distributed under a dual license:
+
+Non-Commercial Use:
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ 
+Commercial Use:
+    Please contact sunkid@iminurnetz.com
+
