@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Wed Jun 08 11:30:29 PDT 2011
-buildNumber0=39
+#Wed Jun 08 11:44:26 PDT 2011
+buildNumber0=40
